Fix modal Close button being too dark on press

--- a/src/styles/generic/_modal.scss
+++ b/src/styles/generic/_modal.scss
@@ -51,7 +51,7 @@
   &:hover {
     background-color: $dark-10;
   }
-  &:hover:active {
+  &:not([disabled]):hover:active {
     background-color: $dark-20;
   }
 }
